<resources>
    <string name="app_name">Social</string>
    <string name="logotext">Social</string>
    <string name="description">Socialise in a new way!</string>
    <string name="logintext">Login</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup_btn">SignUp</string>
    <string name="login_redirect_prompt">Already an User? Login!</string>
    <string name="loginText">Login</string>
    <string name="signup_prompt">Not Registered? Sign Up!</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="update_profile">Update Profile</string>
    <string name="feed">Home Feed</string>
    <string name="explore">Explore</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="events">Events</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="alerts">Alerts</string>
    <string name="message">Message</string>
    <string name="activity">Activity</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="new_post">New Post</string>
    <string name="hey">Hey!</string>
</resources>