<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/baseline_activity"
        android:title="@string/activity" />


    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/create"/>

    <item
        android:id="@+id/navigation_msg"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/message" />

    <item
        android:id="@+id/navigation_notify"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/alerts" />


</menu>