<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:paddingBottom="5dp"
        android:text="@string/sign_up"
        android:textColor="@color/lavender"
        android:textSize="125sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:foregroundGravity="center"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/signup_name"
                android:drawablePadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableStart="@drawable/baseline_person_24"
                android:hint="@string/name"
                android:fontFamily="@font/aladin"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="319dp" />

            <EditText
                android:id="@+id/signup_email"
                android:drawablePadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableStart="@drawable/baseline_email_24"
                android:hint="@string/email"
                android:fontFamily="@font/aladin"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="319dp" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="5dp"
                android:hint="@string/username"
                android:fontFamily="@font/aladin"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="319dp" />


            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:fontFamily="@font/aladin"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:drawablePadding="5dp"
                android:fontFamily="@font/aladin"
                android:textSize="18sp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>